<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ventanas.frag_reportes">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        >
        <Button
            android:id="@+id/btn_cancelarReporte"
            android:text="@string/txt_cancelar"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:background="@drawable/boton_cancelar"
            android:shadowColor="#A8A8A8"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_user_name"
            android:gravity="end"
            android:layout_marginEnd="20dp"/>

    </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/colorGrisClaro">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/lista_desplegable_reportes"
                android:text="¿QUE VAS A REPORTAR?"
                android:textSize="@dimen/textoTitulos"
                android:textStyle="bold"
                android:typeface="normal" />
            <Spinner
                android:id="@+id/lista_desplegable_reportes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="150dp"
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    >
                    <!--CONTENEDOR POSTE-->
                    <LinearLayout
                        android:id="@+id/contenedorPoste"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/tb_numero_poste"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/texto_numeroPoste"
                                android:imeOptions="actionNext"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/tb_propietario_poste"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/texto_propietarioPoste"
                                android:imeOptions="actionNext"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/tb_uso_poste"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/texto_usoPoste"
                                android:imeOptions="actionNext"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/tb_estado_poste"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/texto_estadoPoste"
                                android:imeOptions="actionNext"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <!--FIN CONTENEDOR POSTE-->
                    <!--CONTENEDOR MEDIDOR-->
                    <LinearLayout
                        android:id="@+id/contenedorMedidor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/tb_numero_medidor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/texto_numeroMedidor"
                                android:imeOptions="actionNext"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/tb_ubicacion_medidor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/texto_ubicacionMedidor"
                                android:imeOptions="actionNext"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <!--FIN CONTENEDOR MEDIDOR-->
                    <!--CONTENEDOR FRENTE DE CALLE-->
                    <LinearLayout
                        android:id="@+id/contenedorFrenteCalle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/tb_calle_frenteCalle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/texto_calleFrenteCalle"
                                android:imeOptions="actionNext"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/tb_numero_calle_frenteCalle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/texto_numeroCalleFrenteCalle"
                                android:imeOptions="actionNext"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/tb_colonia_frenteCalle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/texto_coloniaFrenteCalle"
                                android:imeOptions="actionNext"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <!--FIN CONTENEDOR FRENTE DE CALLE-->
                </RelativeLayout>




            </androidx.core.widget.NestedScrollView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/colorGrisClaro"
                >
                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    >
                    <TextView
                        android:id="@+id/latitudVer"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="Latitud"
                        android:textAlignment="center"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/longitudVer"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="Longitud"
                        android:textAlignment="center"
                        android:textSize="12sp"/>
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Muestras Fotográficas"
                    android:textAlignment="center"
                    android:layout_marginBottom="5dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="10dp">


                    <ImageButton
                        android:id="@+id/btn_foto_1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/fondo_boton_foto_desactivado"
                        android:src="@drawable/icono_agregar_foto_deshabilitado"
                        android:clickable="false"
                        />

                    <ImageButton
                        android:id="@+id/btn_foto_2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/fondo_boton_foto_desactivado"
                        android:src="@drawable/icono_agregar_foto_deshabilitado"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp"
                        android:clickable="false"
                        />

                    <ImageButton
                        android:id="@+id/btn_foto_3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/fondo_boton_foto_desactivado"
                        android:src="@drawable/icono_agregar_foto_deshabilitado"
                        android:clickable="false"
                        />
                </LinearLayout>
                <Button
                    android:id="@+id/btn_enviarRreporte"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:background="@drawable/boton_enviar_deshabilitado"
                    android:shadowColor="#A8A8A8"
                    android:text="@string/txt_enviar"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:clickable="false"
                    />


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</FrameLayout>